--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@
     list-style-type: none;
     box-sizing: border-box;
 }
+#sidebar-toggle {
+    display: none;
+}
 .sidebar {
     height: 100%;
     width: 240px;
@@ -24,6 +27,7 @@
     background: var(--main-color);
     color: #fff;
     overflow-y: auto;
+    transition: width 500ms;
 }
 .sidebar-header {
     display: flex;
@@ -45,9 +49,28 @@
 .sidebar a span:last-child {
     padding-left: .6rem;
 }
+#sidebar-toggle:checked ~ .sidebar {
+    width: 60px;
+}
+#sidebar-toggle:checked ~ .sidebar .sidebar-header h3 span,
+#sidebar-toggle:checked ~ .sidebar li span:last-child {
+   display: none;
+}
+#sidebar-toggle:checked ~ .sidebar .sidebar-header,
+#sidebar-toggle:checked ~ .sidebar li {
+    display: flex;
+    justify-content: center;
+}
+#sidebar-toggle:checked ~ .main-content {
+    margin-left: 60px;
+}
+#sidebar-toggle:checked ~ .main-content header{
+    left: 60px;
+}
 .main-content {
     position: relative;
     margin-left: 240px;
+    transition: margin-left 500ms;
 }
 header {
     position: fixed;
@@ -62,6 +85,7 @@ header {
     align-items:center;
     justify-content: space-between;
     border-bottom: 1px solid #ccc;
+    transition: all 500ms;
 }
 .search-wrapper {
     display: flex;
@@ -93,6 +117,7 @@ main {
     margin-top: 60px;
     background: #f1f5f9;
     min-height: 90vh;
+    padding: 1rem 3rem;
 }
 .dash-title {
     color: var(--color-dark);
@@ -101,19 +126,236 @@ main {
 .dash-cards {
     display:grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 5rem;
+    grid-column-gap: 3rem;
 }
 .card-single {
     background: #fff;
     border-radius: 7px;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 }
 .card-body {
-    padding: 1rem;
+    padding: 1.3rem 1rem;
     display: flex;
     align-items: center;
 }
 .card-body span {
     font-size: 1.5rem;
     color: #777;
+    padding-right: 1.4rem;
+}
+.card-body h5 {
+    color: var(--text-grey);
+    font-size: 1rem;
+}
+.card-body h4 {
+    color: var(--color-dark);
+    font-size: 1.1rem;
+    margin-top: .2rem;
+}
+.card-footer {
+    padding: .2rem 1rem;
+    background: #f9fafc;
+}
+.card-footer a {
+    color: var(--main-color);
+}
+.recent {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+.activity-grid {
+    display: grid;
+    grid-template-columns: 75% 25%;
+    grid-column-gap: 1.5rem;
+}
+.activity-card,
+.summary-card,
+.bday-card {
+    background: #fff;
+    border-radius: 7px;
+}
+.activity-card h3 {
+    color: var(--text-grey);
+    margin: 1rem;
+}
+.activity-card table {
+    width: 100%;
+    border-collapse: collapse;
+}
+.activity-card thead {
+    background: #efefef;
+    text-align: left;
+}
+th, td {
+    font-size: .9rem;
+    padding: 1rem .5rem;
+    color: var(--color-dark);
+}
+td {
+    font-size: .8rem;
+}
+tbody td:nth-child(even) {
+    background: #f9fafc;
+}
+.badge {
+    padding: .2rem 1rem;
+    border-radius: 20px;
+    font-weight: 700;
+    font-size: .7rem;
+}
+.badge.success {
+    background: #DEF7EC;
+    color: var(--main-color);
+}
+.badge.warning {
+    background: #f0f6b2;
+    color: orange;
+}
+.td-team {
+    display: flex;
+    align-items: center;
+}
+.img-1,
+.img-2,
+.img-3 {
+    height: 38px;
+    width: 38px;
+    border-radius: 50%;
+    margin-left: -15px;
+    border: 3px solid #efefef;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.img-1 {
+    background-color: orchid;
+}
+.img-2 {
+    background-color: palegreen;
+}
+.img-3 {
+    background-color:peru;
+}
+.summary-card {
+    margin-bottom: 1.5rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+}
+.summary-single {
+    padding: .5rem 1rem;
+    display: flex;
+    align-items: center;
+}
+.summary-single span {
+    font-size: 1.5rem;
+    color: #777;
     padding-right: 1rem;
+}
+.summary-single h5 {
+    color: var(--main-color);
+    font-size: 1.1rem;
+    margin-bottom: 0rem !important;
+}
+.summary-single small {
+    font-weight: 700;
+    color: var(--text-grey);
+}
+.bday-card {
+    padding: 1rem;
+}
+.bday-flex {
+    display: flex;
+    align-items: center;
+    margin-bottom: .3rem;
+}
+.bday-img {
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    border: 3px solid #efefef;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: gray;
+    margin-right: .7rem;
+}
+.text-center {
+    text-align: center;
+}
+.text-center button {
+    background: var(--main-color);
+    color: #fff;
+    border: 1px solid var(--main-color);
+    border-radius: 4px;
+    padding: .4rem 1rem;
+}
+.table-responsive {
+    overflow-x: auto;
+}
+
+@media only screen and (max-width: 1200px) {
+    .sidebar {
+        width: 60px;
+        z-index: 150;
+    }
+    .sidebar .sidebar-header h3 span,
+    .sidebar li span:last-child {
+       display: none;
+    }
+    .sidebar .sidebar-header,
+    .sidebar li {
+        display: flex;
+        justify-content: center;
+    }
+    .main-content {
+        margin-left: 60px;
+    }
+    .main-content header{
+        left: 60px;
+        width: calc(100% - 60px);
+    }
+    #sidebar-toggle:checked ~ .sidebar {
+        width: 240px;
+    }
+    #sidebar-toggle:checked ~ .sidebar .sidebar-header h3 span,
+    #sidebar-toggle:checked ~ .sidebar li span:last-child {
+       display: inline;
+    }
+    #sidebar-toggle:checked ~ .sidebar .sidebar-header {
+        display: flex;
+        justify-content: space-between;
+    }
+    #sidebar-toggle:checked ~ .sidebar li {
+        display: block;
+    }
+    #sidebar-toggle:checked ~ .main-content {
+        margin-left: 60px;
+    }
+    #sidebar-toggle:checked ~ .main-content header{
+        left: 60px;
+    }
+}
+
+@media only screen and (max-width: 860px) {
+    .dash-cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .card-single {
+        margin-bottom: 1rem;
+    }
+    .activity-grid {
+        display: block;
+    }
+    .summary {
+        margin-top: 1.5rem;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .dash-cards {
+        grid-template-columns: 100%;
+    }
+}
+@media only screen and (max-width: 450px) {
+    main {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
 }
